--- a/api.css
+++ b/api.css
@@ -15,13 +15,19 @@
     float: left;
 }
 
+.middle_pane_container {
+    width: 80%;
+    height: 100%;
+    float: left;
+}
+
 #middle_pane {
     width: 350px;
     height: 100%;
     background-color: rgb(233, 238, 170);
     border-radius: 20px;
     border: 4px solid #73AD21;
-    float: left;
+    /* float: left; */
 }
 
 #title {
